# opentelemetry-cpp-demo

./: .gitignore  CMakeLists.txt  README.md  client.cc  server.cc
protos/: messages.grpc.pb.cc  messages.grpc.pb.h  messages.pb.cc  messages.pb.h
